# cookiecutter-modern-python-projects

./: .fridayrules  README.md  cookiecutter.json  test_template.py
docs/: features.md  project_types.md
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  justfile  mkdocs.yml  pyproject.toml  {% if cookiecutter.license == 'MIT' %}LICENSE{% endif %}
{{cookiecutter.project_slug}}/docs/: cli.md  development.md  index.md  {% if cookiecutter.include_mkdocs == 'y' %}development.md{% endif %}
{{cookiecutter.project_slug}}/scripts/automation/: __init__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/cli/: __init__.py
{{cookiecutter.project_slug}}/tests/: conftest.py  test_cli.py  test_main.py  {% if cookiecutter.include_data_science == 'y' %}test_data.py{% endif %}  {% if cookiecutter.include_fastapi == 'y' %}test_api.py{% endif %}  {% if cookiecutter.include_typer == 'y' %}test_cli.py{% endif %}
{{cookiecutter.project_slug}}/{% if cookiecutter.project_type in ['full', 'automation'] %}scripts{% endif %}/: __init__.py
{{cookiecutter.project_slug}}/{% if cookiecutter.project_type in ['full', 'scripts'] %}scripts{% endif %}/: __init__.py
{{cookiecutter.project_slug}}/{% if cookiecutter.project_type in ['full', 'scripts'] %}scripts{% endif %}/automation/: __init__.py
{{cookiecutter.project_slug}}/{% if cookiecutter.use_src_layout == 'y' %}src/{% endif %}{{cookiecutter.project_slug}}/{% if cookiecutter.include_data_science == 'y' %}data{% endif %}/: __init__.py
{{cookiecutter.project_slug}}/{% if cookiecutter.use_src_layout == 'y' %}src/{% endif %}{{cookiecutter.project_slug}}/{% if cookiecutter.include_fastapi == 'y' %}api{% endif %}/: __init__.py
{{cookiecutter.project_slug}}/{% if cookiecutter.use_src_layout == 'y' %}src/{% endif %}{{cookiecutter.project_slug}}/{% if cookiecutter.include_typer == 'y' %}cli{% endif %}/: __init__.py
